# cryptopals

./: .pre-commit-config.yaml  Cargo.toml  README.md
benches/: set01.rs
benches/data/: lorem_ipsum.hex
data/set02/: c11.txt
data/set05/: README.md  cain_wordlist.txt
src/: aes.rs  base64.rs  hash.rs  hmac.rs  lib.rs  md4.rs  mt19973.rs  prime.rs  prime_tables.rs  sha1.rs  sha256.rs
src/set01/: c01.rs  c02.rs  c03.rs  c04.rs  c05.rs  c06.rs  c07.rs  c08.rs
src/set02/: c09.rs  c10.rs  c11.rs  c12.rs  c13.rs  c14.rs  c15.rs  c16.rs  mod.rs
src/set03/: c17.rs  c18.rs  c19.rs  c20.rs  c21.rs  c22.rs  c23.rs  c24.rs  mod.rs
src/set04/: c25.rs  c26.rs  c27.rs  c28.rs  c29.rs  c30.rs  c32.rs  mod.rs
src/set04/c31/: mod.rs
src/set04/c31/server/: main.rs  mod.rs
src/set05/: c33.rs  c34.rs  c35.rs  c37.rs  c38.rs  c39.rs  c40.rs  mod.rs
src/set05/c36/: client.rs  mod.rs  server.rs
