[package]
name = "cryptopals"
authors = ["Harry Saunders <33317174+hsaunders1904@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "cryptopals"

[dependencies]
axum = "0.7"
futures = "0.3.31"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8"
rayon = "1.10.0"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.23.0"

[[bench]]
name = "set01"
harness = false
required-features = []
